Added all of main classes like dao, service, controller, and mappers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/usuario
-spring.data.mongodb.database= usuario
+##spring.data.mongodb.uri=mongodb+srv://otavioizidoro:<>@cluster0.q6mmwz8.mongodb.net/?retryWrites=true&w=majority
+##spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.host= localhost
+spring.data.mongodb.port= 27017
+spring.data.mongodb.database= frequency
+#
+#spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
