--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,6 @@
 spring.data.mongodb.host= localhost
 spring.data.mongodb.port= 27017
 spring.data.mongodb.database= frequency
-#
-#spring.datasource.url=jdbc:mysql://localhost/vollmed_api
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+openai.api.url=https://api.openai.com/v1/chat/completions
+openai.api.key={API_KEY}
+openai.api.model=gpt-3.5-turbo
