Connected with mongo DB cluster

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://otavioizidoro:projetotcc@cluster0.q6mmwz8.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database= Frequency
 openai.api.url=https://api.openai.com/v1/chat/completions
-openai.api.key=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
+openai.api.key={API_KEY}
 openai.api.model=gpt-3.5-turbo
