Change mongo URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://otavioizidoro:projetotcc@cluster0.q6mmwz8.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri={MONGO_URL}
 spring.data.mongodb.database= Frequency
 openai.api.url=https://api.openai.com/v1/chat/completions
 openai.api.key={API_KEY}
